--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -29,6 +29,50 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
+                <instance type="Sprite" uid="23">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>640</x>
+                        <y>360</y>
+                        <z>0</z>
+                        <width>1280</width>
+                        <height>720</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="spSand" uid="2">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>810</x>
+                        <y>38</y>
+                        <z>0</z>
+                        <width>1716</width>
+                        <height>75</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
                 <instance type="spTrash" uid="0">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
@@ -87,14 +131,14 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>245</x>
-                        <y>227</y>
+                        <x>205</x>
+                        <y>358</y>
                         <z>0</z>
-                        <width>69.959793091</width>
-                        <height>43.910934448</height>
+                        <width>77.765922546</width>
+                        <height>93.074180603</height>
                         <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.525423706</hotspotY>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0.609649122</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -159,8 +203,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>435</x>
-                        <y>103</y>
+                        <x>467</x>
+                        <y>230</y>
                         <z>0</z>
                         <width>96</width>
                         <height>64</height>
@@ -188,8 +232,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>647</x>
-                        <y>103</y>
+                        <x>679</x>
+                        <y>230</y>
                         <z>0</z>
                         <width>96</width>
                         <height>64</height>
@@ -203,9 +247,9 @@
                 <instance type="txScoreLabel" uid="12">
                     <properties>
                         <text>SCORE</text>
-                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-visibility>Visible</initial-visibility>
                         <font>Press Start 2P,-24,500,0</font>
-                        <color>255,255,153</color>
+                        <color>255,255,204</color>
                         <horizontal-alignment>Left</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -215,8 +259,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>90.374908447</x>
-                        <y>12.756546021</y>
+                        <x>89.374908447</x>
+                        <y>22.756546021</y>
                         <z>0</z>
                         <width>128</width>
                         <height>32</height>
@@ -230,9 +274,9 @@
                 <instance type="txScoreLabel" uid="13">
                     <properties>
                         <text>MAX</text>
-                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-visibility>Visible</initial-visibility>
                         <font>Press Start 2P,-24,500,0</font>
-                        <color>0,204,102</color>
+                        <color>153,204,255</color>
                         <horizontal-alignment>Left</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -242,8 +286,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>228.374908447</x>
-                        <y>12.756546021</y>
+                        <x>227.374908447</x>
+                        <y>22.756546021</y>
                         <z>0</z>
                         <width>128</width>
                         <height>32</height>
@@ -257,9 +301,9 @@
                 <instance type="txScoreMAX" uid="14">
                     <properties>
                         <text>0</text>
-                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-visibility>Visible</initial-visibility>
                         <font>Press Start 2P,-32,500,0</font>
-                        <color>51,102,255</color>
+                        <color>51,0,204</color>
                         <horizontal-alignment>Center</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -269,8 +313,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>200.374908447</x>
-                        <y>42.756546021</y>
+                        <x>199.374908447</x>
+                        <y>52.756546021</y>
                         <z>0</z>
                         <width>70.992492676</width>
                         <height>32</height>
@@ -284,9 +328,9 @@
                 <instance type="txScore" uid="15">
                     <properties>
                         <text>0</text>
-                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-visibility>Visible</initial-visibility>
                         <font>Press Start 2P,-32,500,0</font>
-                        <color>255,0,51</color>
+                        <color>255,153,0</color>
                         <horizontal-alignment>Center</horizontal-alignment>
                         <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Center</hotspot>
@@ -296,8 +340,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>86.374908447</x>
-                        <y>42.756546021</y>
+                        <x>85.374908447</x>
+                        <y>52.756546021</y>
                         <z>0</z>
                         <width>118.374557495</width>
                         <height>32</height>
@@ -310,7 +354,7 @@
                 </instance>
                 <instance type="spDiv" uid="17">
                     <properties>
-                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
@@ -318,8 +362,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>152.867294312</x>
-                        <y>29.30644989</y>
+                        <x>151.867294312</x>
+                        <y>39.30644989</y>
                         <z>0</z>
                         <width>4.430969238</width>
                         <height>56</height>
@@ -347,8 +391,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>435</x>
-                        <y>231</y>
+                        <x>467</x>
+                        <y>358</y>
                         <z>0</z>
                         <width>96</width>
                         <height>64</height>
@@ -376,8 +420,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>435</x>
-                        <y>359</y>
+                        <x>467</x>
+                        <y>486</y>
                         <z>0</z>
                         <width>96</width>
                         <height>64</height>
@@ -405,8 +449,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>647</x>
-                        <y>231</y>
+                        <x>679</x>
+                        <y>358</y>
                         <z>0</z>
                         <width>96</width>
                         <height>64</height>
@@ -434,8 +478,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>647</x>
-                        <y>359</y>
+                        <x>679</x>
+                        <y>486</y>
                         <z>0</z>
                         <width>96</width>
                         <height>64</height>
@@ -451,7 +495,7 @@
                         <text>game over</text>
                         <initial-visibility>Invisible</initial-visibility>
                         <font>Arial,-32,400,0</font>
-                        <color>0,0,0</color>
+                        <color>255,255,255</color>
                         <horizontal-alignment>Left</horizontal-alignment>
                         <vertical-alignment>Top</vertical-alignment>
                         <hotspot>Top-left</hotspot>
@@ -461,36 +505,14 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>171</x>
-                        <y>302</y>
+                        <x>26</x>
+                        <y>294</y>
                         <z>0</z>
                         <width>288</width>
                         <height>118</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="spSand" uid="2">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>810</x>
-                        <y>38</y>
-                        <z>0</z>
-                        <width>1716</width>
-                        <height>75</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -517,10 +539,70 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+                <instance type="spPause" uid="16">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>689</x>
+                        <y>67</y>
+                        <z>0</z>
+                        <width>39.974990845</width>
+                        <height>39.974990845</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="txPaused" uid="22">
+                    <properties>
+                        <text>paused</text>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <font>Arial,-32,400,0</font>
+                        <color>255,255,255</color>
+                        <horizontal-alignment>Left</horizontal-alignment>
+                        <vertical-alignment>Top</vertical-alignment>
+                        <hotspot>Top-left</hotspot>
+                        <wrapping>Word</wrapping>
+                        <line-height>0</line-height>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>23</x>
+                        <y>404</y>
+                        <z>0</z>
+                        <width>252</width>
+                        <height>122</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
             </instances>
             <effects />
         </layer>
     </layers>
-    <nonworld-instances />
+    <nonworld-instances>
+        <instance type="arControl" uid="11">
+            <properties>
+                <width>10</width>
+                <height>1</height>
+                <depth>1</depth>
+            </properties>
+            <instance-variables>
+                <MAX_SCORE>0</MAX_SCORE>
+            </instance-variables>
+        </instance>
+    </nonworld-instances>
     <effects />
 </c2layout>
