--- a/game/Layouts/MENU.xml
+++ b/game/Layouts/MENU.xml
@@ -13,7 +13,7 @@
     </margins>
     <unbounded-scrolling>0</unbounded-scrolling>
     <layers>
-        <layer name="Layer 0" sid="832983612374972">
+        <layer name="Background" sid="832983612374972">
             <initially-visible>1</initially-visible>
             <background-color>255,255,255</background-color>
             <transparent>0</transparent>
@@ -29,29 +29,19 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="spTitle" uid="20">
+                <instance type="tbMenu" uid="17">
                     <properties>
-                        <character-width>16</character-width>
-                        <character-height>16</character-height>
-                        <character-set>ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.,;:?!-_~#&quot;&apos;&amp;()[]|`\/@°+=*$£€&lt;&gt;</character-set>
-                        <text>The Sauim Surfer</text>
-                        <scale>3</scale>
                         <initial-visibility>Visible</initial-visibility>
-                        <horizontal-alignment>Center</horizontal-alignment>
-                        <vertical-alignment>Center</vertical-alignment>
                         <hotspot>Top-left</hotspot>
-                        <wrapping>Word</wrapping>
-                        <character-spacing>0</character-spacing>
-                        <line-height>0</line-height>
                     </properties>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>167</x>
-                        <y>125</y>
+                        <x>0</x>
+                        <y>0</y>
                         <z>0</z>
-                        <width>512</width>
-                        <height>224</height>
+                        <width>1280</width>
+                        <height>720</height>
                         <depth>0</depth>
                         <hotspotX>0</hotspotX>
                         <hotspotY>0</hotspotY>
@@ -59,6 +49,25 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
+            </instances>
+            <effects />
+        </layer>
+        <layer name="Objects" sid="392716813302627">
+            <initially-visible>1</initially-visible>
+            <background-color>255,255,255</background-color>
+            <transparent>1</transparent>
+            <parallax>
+                <x>1</x>
+                <y>1</y>
+            </parallax>
+            <zoom-rate>1</zoom-rate>
+            <opacity>1</opacity>
+            <force-own-texture>0</force-own-texture>
+            <global>0</global>
+            <use-render-cells>0</use-render-cells>
+            <blend-mode>0</blend-mode>
+            <effect-fallback>0</effect-fallback>
+            <instances>
                 <instance type="spStart" uid="21">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
@@ -69,14 +78,14 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>416</x>
-                        <y>384</y>
+                        <x>640</x>
+                        <y>576</y>
                         <z>0</z>
-                        <width>160</width>
+                        <width>288</width>
                         <height>96</height>
                         <depth>0</depth>
-                        <hotspotX>0.500794888</hotspotX>
-                        <hotspotY>0.462427735</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.4609375</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
