adição da musica

--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -337,11 +337,11 @@
                         <x>506</x>
                         <y>230</y>
                         <z>0</z>
-                        <width>143.784759521</width>
-                        <height>56.177776337</height>
+                        <width>162.726470947</width>
+                        <height>56.533332825</height>
                         <depth>0</depth>
-                        <hotspotX>0.511976063</hotspotX>
-                        <hotspotY>0.436708868</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.503144681</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -366,11 +366,11 @@
                         <x>718</x>
                         <y>230</y>
                         <z>0</z>
-                        <width>143.784759521</width>
-                        <height>56.177776337</height>
+                        <width>162.726470947</width>
+                        <height>56.533332825</height>
                         <depth>0</depth>
-                        <hotspotX>0.511976063</hotspotX>
-                        <hotspotY>0.436708868</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.503144681</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -395,11 +395,11 @@
                         <x>506</x>
                         <y>358</y>
                         <z>0</z>
-                        <width>143.784759521</width>
-                        <height>56.177776337</height>
+                        <width>162.726470947</width>
+                        <height>56.533332825</height>
                         <depth>0</depth>
-                        <hotspotX>0.511976063</hotspotX>
-                        <hotspotY>0.436708868</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.503144681</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -424,11 +424,11 @@
                         <x>506</x>
                         <y>486</y>
                         <z>0</z>
-                        <width>143.784759521</width>
-                        <height>56.177776337</height>
+                        <width>162.726470947</width>
+                        <height>56.533332825</height>
                         <depth>0</depth>
-                        <hotspotX>0.511976063</hotspotX>
-                        <hotspotY>0.436708868</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.503144681</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -453,11 +453,11 @@
                         <x>718</x>
                         <y>358</y>
                         <z>0</z>
-                        <width>143.784759521</width>
-                        <height>56.177776337</height>
+                        <width>162.726470947</width>
+                        <height>56.533332825</height>
                         <depth>0</depth>
-                        <hotspotX>0.511976063</hotspotX>
-                        <hotspotY>0.436708868</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.503144681</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -482,11 +482,11 @@
                         <x>718</x>
                         <y>486</y>
                         <z>0</z>
-                        <width>143.784759521</width>
-                        <height>56.177776337</height>
+                        <width>162.726470947</width>
+                        <height>56.533332825</height>
                         <depth>0</depth>
-                        <hotspotX>0.511976063</hotspotX>
-                        <hotspotY>0.436708868</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.503144681</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
