--- a/game/Layouts/MAIN.xml
+++ b/game/Layouts/MAIN.xml
@@ -337,11 +337,11 @@
                         <x>506</x>
                         <y>230</y>
                         <z>0</z>
-                        <width>162.726470947</width>
-                        <height>56.533332825</height>
+                        <width>175.641265869</width>
+                        <height>56.177776337</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.503144681</hotspotY>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -366,11 +366,11 @@
                         <x>718</x>
                         <y>230</y>
                         <z>0</z>
-                        <width>162.726470947</width>
-                        <height>56.533332825</height>
+                        <width>175.641265869</width>
+                        <height>56.177776337</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.503144681</hotspotY>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -395,11 +395,11 @@
                         <x>506</x>
                         <y>358</y>
                         <z>0</z>
-                        <width>162.726470947</width>
-                        <height>56.533332825</height>
+                        <width>175.641265869</width>
+                        <height>56.177776337</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.503144681</hotspotY>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -424,11 +424,11 @@
                         <x>506</x>
                         <y>486</y>
                         <z>0</z>
-                        <width>162.726470947</width>
-                        <height>56.533332825</height>
+                        <width>175.641265869</width>
+                        <height>56.177776337</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.503144681</hotspotY>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -453,11 +453,11 @@
                         <x>718</x>
                         <y>358</y>
                         <z>0</z>
-                        <width>162.726470947</width>
-                        <height>56.533332825</height>
+                        <width>175.641265869</width>
+                        <height>56.177776337</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.503144681</hotspotY>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -482,11 +482,11 @@
                         <x>718</x>
                         <y>486</y>
                         <z>0</z>
-                        <width>162.726470947</width>
-                        <height>56.533332825</height>
+                        <width>175.641265869</width>
+                        <height>56.177776337</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.503144681</hotspotY>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -757,6 +757,28 @@
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="spExit" uid="11">
+                    <properties>
+                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>1214</x>
+                        <y>46</y>
+                        <z>0</z>
+                        <width>75</width>
+                        <height>57</height>
+                        <depth>0</depth>
+                        <hotspotX>0.50666666</hotspotX>
+                        <hotspotY>0.508771956</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
